.apex/unpackaged/objects/redwing__Training_Track_Category__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Learning_Category__c</fullName>
        <label>Catalog</label>
        <referenceTo>redwing__Learning_Category__c</referenceTo>
        <relationshipLabel>Catalog Learning Tracs</relationshipLabel>
        <relationshipName>Training_Track_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Learning Trac Catalogs</relationshipLabel>
        <relationshipName>Training_Track_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Learning Trac Catalog</label>
    <nameField>
        <displayFormat>LTC-{0000000}</displayFormat>
        <label>Learning Trac Catalog ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Trac Catalogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>